--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
     <div class="footer__columns">
       <div class="footer__column footer__column_content_copyright">
         <div class="logo logo_place_footer"></div>
-        <p class="footer__author">&copy; Борис Зашляпин</p>
+        <p class="footer__author">&copy; Анастасия Иванова</p>
       </div>
       <div class="footer__column footer__column_content_info">
         <h2 class="footer__column-heading">О Практикуме</h2>
